--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "echarts": "^5.4.3",
     "jquery": "^3.7.1",
     "vue": "^3.4.0"
