重组项目文件结构，优化目录组织
- 创建 docs 目录存放文档文件
- 创建 scripts 目录存放脚本文件
- 创建 deploy 目录存放部署配置文件
- 更新文档中的路径引用以反映新的目录结构
- 删除敏感文件
- 优化项目根目录，减少文件冗余

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
     name: logistics-dashboard
   
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/logistics_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false
-    username: root
-    password: root
+            driver-class-name: com.mysql.cj.jdbc.Driver
+            url: jdbc:mysql://localhost:3307/logistics_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
+            username: root
+            password: root
 
 mybatis-plus:
   configuration:
