--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -29,7 +29,7 @@ services:
 
   backend:
     build:
-      context: ./BackEnd
+      context: ./backend
       dockerfile: Dockerfile
     container_name: logistics-backend
     restart: always
