feat: 实现MyBatis-Plus架构最佳实践和代码生成器
- 添加统一异常处理机制（GlobalExceptionHandler）
- 集成SLF4J日志系统，配置分层日志管理
- 实现性能优化配置（SQL性能分析、分页优化）
- 添加代码生成器（CodeGenerator）和配置文件
- 实现BaseEntity基类和自动填充功能
- 添加VO对象和请求参数验证
- 配置P6Spy SQL性能监控
- 添加代码生成器使用指南文档
- 更新项目变更日志
- 清理冗余文件

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -55,6 +55,27 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- p6spy SQL性能监控 -->
+        <dependency>
+            <groupId>p6spy</groupId>
+            <artifactId>p6spy</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+        
+        <!-- MyBatis-Plus代码生成器 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
+        
+        <!-- Freemarker模板引擎 -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version>
+        </dependency>
+        
         <!-- Spring Boot Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
