--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,17 +1,19 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
   servlet:
     context-path: /api
 
 spring:
   application:
     name: logistics-dashboard
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   
   datasource:
-            driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-            url: jdbc:p6spy:mysql://localhost:3307/logistics_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
-            username: root
-            password: root
+    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
+    url: jdbc:p6spy:mysql://${DB_HOST:localhost}:${DB_PORT:3307}/${DB_NAME:logistics_db}?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:root}
 
 mybatis-plus:
   configuration:
@@ -19,10 +21,16 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto
-      logic-delete-field: deleted
+      logic-delete-field: isDeleted
       logic-delete-value: 1
       logic-not-delete-value: 0
   mapper-locations: classpath:mapper/*.xml
+
+springfox:
+  documentation:
+    swagger-ui:
+      enabled: ${SWAGGER_ENABLED:true}
+    enabled: ${SWAGGER_ENABLED:true}
 
 logging:
   level:
