--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -1,12 +1,15 @@
-FROM node:18-alpine AS builder
+FROM node:18.20-alpine AS builder
 
 WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm ci
 
 COPY . .
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
 
 RUN npm run build
 
@@ -17,5 +20,8 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
