--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,35 @@
-FROM maven:3.8-openjdk-11 AS builder
+FROM maven:3.8.6-openjdk-11 AS builder
 
 WORKDIR /app
 
 COPY pom.xml .
 
-RUN mvn dependency:go-offline
+RUN mvn dependency:go-offline -B
 
 COPY src ./src
 
-RUN mvn clean package -DskipTests
+ARG SPRING_PROFILES_ACTIVE=prod
+ENV SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
 
-FROM openjdk:11-jre-slim
+RUN mvn clean package -DskipTests -B
+
+FROM eclipse-temurin:11-jre-jammy
+
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
 COPY --from=builder /app/target/*.jar app.jar
 
+RUN chown -R appuser:appuser /app
+
+USER appuser
+
 EXPOSE 8080
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+  CMD curl -f http://localhost:8080/api/warehouses || exit 1
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
