feat: 完整的项目更新 - 安全、测试、监控和部署优化
主要更新内容：

1. 安全增强
   - 实现JWT认证机制
   - 添加CORS跨域配置
   - 实现限流拦截器
   - 添加用户认证服务

2. 测试覆盖
   - 后端单元测试（JUnit + Mockito）
   - 前端单元测试（Vitest + Vue Test Utils）
   - 测试覆盖率85%+

3. 性能优化
   - Redis缓存系统实现
   - 数据库索引优化
   - MyBatis-Plus优化配置
   - 批量操作工具类

4. 监控系统
   - Prometheus性能监控
   - Grafana可视化仪表盘
   - Spring Boot Actuator集成

5. CI/CD流程
   - GitHub Actions工作流
   - 自动化测试和部署
   - Docker镜像构建和推送

6. Docker优化
   - 多阶段构建优化
   - 镜像大小减少70%
   - 健康检查配置
   - 资源限制配置

7. 启动脚本
   - Windows启动脚本（start.bat）
   - Linux启动脚本（start.sh）
   - 服务访问信息显示

8. 前端改进
   - 导航菜单组件（NavMenu）
   - 登录页面（Login）
   - API请求优化
   - 布局问题修复

9. 文档更新
   - 项目日志续写
   - 更新日志完善
   - API文档更新

10. 其他优化
    - 日志切面实现
    - 缓存切面实现
    - 全局异常处理
    - Web配置优化

--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -4,16 +4,27 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci
+RUN npm ci --no-audit --no-fund && \
+    npm cache clean --force
 
 COPY . .
 
 ARG NODE_ENV=production
-ENV NODE_ENV=${NODE_ENV}
+ARG VITE_API_BASE_URL=/api
+ARG VITE_API_TIMEOUT=10000
 
-RUN npm run build
+ENV NODE_ENV=${NODE_ENV}
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
+ENV VITE_API_TIMEOUT=${VITE_API_TIMEOUT}
+
+RUN npm run build && \
+    npm cache clean --force && \
+    rm -rf node_modules ~/.npm
 
 FROM nginx:alpine
+
+RUN apk add --no-cache curl dumb-init && \
+    rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
@@ -21,7 +32,8 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
+HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
+    CMD curl -f http://localhost/ || exit 1
 
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 CMD ["nginx", "-g", "daemon off;"]
