--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.6.2",
+    "jsdom": "^23.0.0",
     "prettier": "^3.7.4",
     "terser": "^5.44.1",
     "vite": "^5.0.0",
