--- a/FrontEnd/.env.development
+++ b/FrontEnd/.env.development
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8080/api
+VITE_API_BASE_URL=http://localhost:8081
 VITE_API_TIMEOUT=5000
 VITE_APP_TITLE=物流仓储大数据展示系统
 VITE_APP_VERSION=1.0.0
