--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -11,6 +11,14 @@ spring:
       idle-timeout: 600000
       max-lifetime: 1800000
       connection-test-query: SELECT 1
+  cache:
+    type: none
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 5000
+    lettuce:
+      connection-timeout: 5000
 
 logging:
   level:
