修复三个核心错误：1. OrderManagement.vue API调用错误 2. WarehouseManagement.vue 变量未定义 3. 确保登录功能正常工作

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -19,6 +19,9 @@ spring:
     timeout: 5000
     lettuce:
       connection-timeout: 5000
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 logging:
   level:
