--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "axios": "^1.13.2",
     "echarts": "^5.4.3",
+    "element-plus": "^2.13.0",
     "pinia": "^3.0.4",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "vue": "^3.4.0",
     "vue-router": "^4.6.4"
   },
